2004-08-25  Graham Percival   <gperlist@shaw.ca>

	* Documentation/user/lilypond-book.itely: slight clean-up.

	* Documentation/user/examples.itely: began section.

2004-08-25  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/script-interface.cc: add slur property.

	* lily/slur-quanting.cc (score_extra_encompass): avoid other slurs
	too.

	* input/regression/phrasing-slur-slur-avoid.ly: new file.

	* lily/ottava-bracket.cc (print): always start from right edge of
	a broken bound. This fixes ottava-clef.ps 

2004-08-24  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* input/regression/slur-script-inside.ly: new file.

	* lily/new-slur.cc (outside_slur_callback): new function, to make
	scripts avoid slurs 

	* lily/slur-engraver.cc (finalize): 

	* lily/script-interface.cc: add inside-slur property.

	* lily/slur-engraver.cc (finalize): read inside-slur property.

	* scm/lily.scm (postscript->png): use ~a iso. ~s 

	* ly/property-init.ly (unHideNotes): hide accidentals at staff
	level. Fixes: hideNotes-accidental.ly

2004-08-23  Pedro Kroger  <kroeger@pedrokroeger.net>

	* scm/page-layout.scm (plain-header): fix bug that print page
	number in the first page if firstpagenumber was different than 1.

2004-08-23  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/framework-ps.scm (define-fonts): use UPCASE for Bluesky
	fonts. Fixes triangle markup for chords.

	* lily/slur-quanting.cc (score_extra_encompass): make score depend
	on distance. This fixes slur-tenuto.ly and slur-tie.ly
 
	* flower/include/interval.hh (T>): add distance() function

	* lily/ottava-bracket.cc (print): add dots to extent. Fixes
	octaviation-dot.ly 

	* lily/context-scheme.cc: ly_context_grob_definition: new function.

	* VERSION (MY_PATCH_LEVEL): release 2.3.12

	* lily/new-slur.cc (add_column): remove set_interface()

2004-08-22  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* input/regression/slur-double.ly: new file. 

	* lily/slur-engraver.cc: add doubleSlurs property
