@@ -1,3 +1,8 @@
+2004-08-26  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* lily/slur-engraver.cc (try_music): ignore slurs_. Otherwise we
+	get spurious messages with skipTypesetting on.
+
 2004-08-25  Graham Percival   <gperlist@shaw.ca>
 
 	* Documentation/user/lilypond-book.itely: slight clean-up.
@@ -29,7 +34,8 @@
 
 	* lily/slur-engraver.cc (finalize): read inside-slur property.
 
-	* scm/lily.scm (postscript->png): use ~a iso. ~s 
+	* scm/lily.scm (postscript->png): use ~a iso. ~s in progress
+	message.
 
 	* ly/property-init.ly (unHideNotes): hide accidentals at staff
 	level. Fixes: hideNotes-accidental.ly
